--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div>
           <label>備註
-            <textarea name="note" rows="3" placeholder="（會自動帶入上一次輸入內容，可修改）"></textarea>
+            <textarea name="note" rows="3" placeholder="（幾點有人在? 請告知，或其它提醒示項）"></textarea>
           </label>
         </div>
       </div>
