--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
-<!-- STAGING 版（AM/PM 選時段 + 預約規則 + 成功提示 + 醒目送出鈕） -->
 <!doctype html>
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LIFF Minimal + 訂單表單</title>
+  <title>吉恩冰塊 訂單表單</title>
   <style>
     :root {
-      --bd:#e5e7eb; --info:#fffbeb; --info-bd:#f59e0b;
-      --primary:#111827; /* 主色：近黑 */
+      --bd:#e5e7eb; --info:#f8fafc; --info-bd:#cbd5e1;
+      --primary:#111827;              /* 主色：近黑 */
       --primary-contrast:#fff;
       --ok-bg:#d1fae5; --ok-bd:#10b981; --ok-fg:#065f46;
     }
-    body { font-family: system-ui, -apple-system, "Noto Sans TC", Arial; margin: 0; background: #fff; }
-    .wrap { max-width: 960px; margin: 0 auto; padding: 24px; }
-    h1 { font-size: 28px; margin: 0 0 16px; }
-    h2 { font-size: 20px; margin: 0 0 12px; }
-    .card { border: 1px solid var(--bd); border-radius: 14px; padding: 16px; background: #fff; }
-    .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 14px; }
+    body { font-family: system-ui, -apple-system, "Noto Sans TC", Arial; margin:0; background:#fff; }
+    .wrap { max-width:960px; margin:0 auto; padding:24px; }
+    h1 { font-size:28px; margin:0 0 16px; }
+    h2 { font-size:20px; margin:0 0 12px; }
+    .card { border:1px solid var(--bd); border-radius:14px; padding:16px; background:#fff; }
+    .grid { display:grid; grid-template-columns:1fr 1fr; gap:14px; }
     label { display:block; font-size:14px; color:#111827; }
     input, textarea { width:100%; box-sizing:border-box; padding:10px 12px; border:1px solid var(--bd); border-radius:10px; background:#fff; }
-    textarea { resize: vertical; }
+    textarea { resize:vertical; }
     .help { color:#6b7280; font-size:12px; display:block; margin-top:4px; }
     .error { color:#b42318; font-size:13px; margin-top:8px; }
-    .ok { color:#0f5132; }
     .muted { color:#6b7280; font-size:13px; }
-    .mt { margin-top: 20px; }
-    .notice { background: var(--info); border: 1px solid var(--info-bd); color: #92400e; padding: 10px 14px; border-radius: 12px; margin: 0 0 16px; }
-    .banner { background:#fff3cd; border:1px solid #f0ad4e; color:#7a5b00; padding:10px 14px; border-radius:12px; margin:0 0 12px; }
+    .mt { margin-top:20px; }
+    .notice { background:var(--info); border:1px solid var(--info-bd); color:#334155; padding:10px 14px; border-radius:12px; margin:0 0 16px; }
 
-    .row { margin: 8px 0; }
+    .row { margin:8px 0; }
 
     .btn, input[type="submit"], input[type="reset"], button {
       color:#111827 !important; -webkit-text-fill-color:#111827 !important;
@@ -40,53 +37,38 @@
     .btn:active { transform: translateY(1px); }
     .btn-primary {
       background: var(--primary); color: var(--primary-contrast) !important; -webkit-text-fill-color: var(--primary-contrast) !important;
-      border: 1px solid var(--primary);
-      box-shadow: 0 6px 18px rgba(17,24,39,.15);
-      font-weight:600;
+      border:1px solid var(--primary); box-shadow:0 6px 18px rgba(17,24,39,.15); font-weight:600;
     }
     .btn-primary:disabled { opacity:.6; cursor:not-allowed; box-shadow:none; }
 
     .seg { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .seg .opt {
       border:2px solid var(--bd); border-radius:12px; padding:10px 14px; cursor:pointer; user-select:none;
-      transition: border-color .15s ease, box-shadow .15s ease, color .15s ease;
+      transition:border-color .15s ease, box-shadow .15s ease;
     }
-    .seg .opt[aria-pressed="true"] { border-color: var(--primary); box-shadow: 0 0 0 3px rgba(17,24,39,.12); font-weight:600; }
+    .seg .opt[aria-pressed="true"] { border-color:var(--primary); box-shadow:0 0 0 3px rgba(17,24,39,.12); font-weight:600; }
     .seg .opt[aria-disabled="true"] { opacity:.45; cursor:not-allowed; }
-
-    .debug-hidden { display:none; }
 
     /* 成功提示 Toast */
     .toast {
-      position: fixed; inset: auto 16px 16px 16px; /* bottom */
-      background: var(--ok-bg); border:1px solid var(--ok-bd); color: var(--ok-fg);
-      padding: 10px 14px; border-radius: 12px; font-size: 14px; display:none;
-      box-shadow: 0 8px 24px rgba(0,0,0,.08);
+      position:fixed; inset:auto 16px 16px 16px;
+      background:var(--ok-bg); border:1px solid var(--ok-bd); color:var(--ok-fg);
+      padding:10px 14px; border-radius:12px; font-size:14px; display:none;
+      box-shadow:0 8px 24px rgba(0,0,0,.08);
     }
-    .toast.show { display:block; animation: fadein .18s ease; }
-    @keyframes fadein { from{opacity:0; transform: translateY(8px);} to{opacity:1; transform: translateY(0);} }
+    .toast.show { display:block; animation:fadein .18s ease; }
+    @keyframes fadein { from{opacity:0; transform:translateY(8px);} to{opacity:1; transform:translateY(0);} }
   </style>
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
   <div class="wrap">
-    <div class="banner">【STAGING 測試環境】此頁僅供內部測試，請勿做正式下單</div>
     <div class="notice">
       <b>配送時段：</b>上午 08:00–12:00；下午 15:00–17:00。
-      <span class="muted">（依你下單的時間，自動限制可預約日期與時段）</span>
+      <span class="muted">（依下單時間自動限制可預約的日期與時段）</span>
     </div>
 
-    <h1>LIFF Minimal</h1>
-
-    <!-- 狀態卡（?debug=1 時顯示） -->
-    <div id="debugCard" class="card debug-hidden">
-      <div class="row">顯示名稱：<span id="displayName">—</span></div>
-      <div class="row">使用者 ID：<span id="userId" class="muted">—</span></div>
-      <div class="row">
-        <input id="refreshBtn" type="button" value="重新取得 Profile" class="btn" />
-        <input id="logoutBtn"  type="button" value="登出" class="btn" />
-      </div>
-    </div>
+    <h1>吉恩冰塊 訂單表單</h1>
 
     <form id="orderForm" class="card mt" autocomplete="on">
       <h2>訂購資料</h2>
@@ -113,7 +95,7 @@
           </label>
         </div>
 
-        <!-- AM/PM 二選一 -->
+        <!-- AM/PM 選擇 -->
         <div>
           <label>選擇配送時段</label>
           <div class="seg" role="group" aria-label="配送時段">
@@ -140,7 +122,7 @@
       <!-- 隱藏欄位送後端 -->
       <input type="hidden" name="startTime">
       <input type="hidden" name="endTime">
-      <input type="hidden" name="slot"> <!-- AM/PM -->
+      <input type="hidden" name="slot">
 
       <div class="row mt" style="display:flex; align-items:center; gap:10px;">
         <input id="submitBtn" type="submit" value="送出" class="btn btn-primary" style="min-width:140px">
@@ -154,57 +136,31 @@
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
   <script>
-    // ===== 環境常數（請確認為測試值） =====
-    const LIFF_ID = "2008199393-NjOGJm4P"; // 測試 LIFF
-    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // 測試 /exec
+    /* ====================  🔧 需替換為「正式值」  ==================== */
+    const LIFF_ID = "2008199393-NjOGJm4P";              // ← 改成正式 LIFF_ID
+    const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbyPFJLb4cGMELLljDXB5-Pl6fEg_doulaksba1p6hHAGvqcv1WYGa3Mr7yUQoYPAYDGKw/exec"; // ← 改成正式 Apps Script /exec
+    /* =============================================================== */
 
-    // 時段常數
-    const AM = { key: "AM", start: "08:00", end: "12:00" };
-    const PM = { key: "PM", start: "15:00", end: "17:00" };
+    // 時段定義
+    const AM = { key:"AM", start:"08:00", end:"12:00" };
+    const PM = { key:"PM", start:"15:00", end:"17:00" };
 
-    // 規則：依「下單當下時間」限制
-    // 07:00–12:59：今天只能 PM；明天(含)以後 AM/PM 皆可
+    // 規則（依下單當下時間）：
+    // 07:00–12:59：今天僅可 PM；明天(含)以後 AM/PM 皆可
     // 13:00–隔日 06:59：今天不可；明天(含)以後 AM/PM 皆可（自動把日期跳到明天）
-    const NOW = new Date(); // 以裝置本地時間（台灣）為準
-    const nowMin = NOW.getHours() * 60 + NOW.getMinutes();
-    const MIN_07_00 = 7*60, MIN_12_59 = 12*60 + 59, MIN_13_00 = 13*60, MIN_06_59 = 6*60 + 59;
+    const NOW = new Date();              // 以使用者本地時間為準（台灣）
+    const nowMin = NOW.getHours()*60 + NOW.getMinutes();
+    const MIN_07_00 = 7*60, MIN_12_59 = 12*60+59, MIN_13_00 = 13*60, MIN_06_59 = 6*60+59;
 
-    const $ = (s) => document.querySelector(s);
-    const byName = (n) => document.querySelector(`[name="${n}"]`);
+    const $ = (s)=>document.querySelector(s);
+    const byName = (n)=>document.querySelector(`[name="${n}"]`);
 
-    // Debug 卡
-    if (new URL(location.href).searchParams.has("debug")) {
-      $("#debugCard").classList.remove("debug-hidden");
-    }
-
-    // 日期輔助
-    function toISODate(d) {
-      const y = d.getFullYear();
-      const m = String(d.getMonth()+1).padStart(2,"0");
-      const da = String(d.getDate()).padStart(2,"0");
-      return `${y}-${m}-${da}`;
-    }
+    // 日期工具
+    function toISODate(d){ const y=d.getFullYear(), m=String(d.getMonth()+1).padStart(2,"0"), da=String(d.getDate()).padStart(2,"0"); return `${y}-${m}-${da}`; }
     function parseISODate(s){ const [y,m,d]=s.split("-").map(Number); return new Date(y,m-1,d); }
-    function addDays(d, n){ const x=new Date(d); x.setDate(x.getDate()+n); return x; }
+    function addDays(d,n){ const x=new Date(d); x.setDate(x.getDate()+n); return x; }
     const today = toISODate(NOW);
     const tomorrow = toISODate(addDays(NOW,1));
-
-    // LIFF 初始化（先就緒，再抓 profile）
-    let LIFF_READY = false;
-    async function initLiff(){
-      try{
-        await liff.init({ liffId: LIFF_ID });
-        if (!liff.isLoggedIn()) { liff.login({ redirectUri: window.location.href }); return; }
-        LIFF_READY = true;
-        try{
-          const p = await liff.getProfile();
-          $("#displayName").textContent = p.displayName || "—";
-          $("#userId").textContent = p.userId || "—";
-          window.__USER_ID__ = p.userId || "";
-          if (window.__USER_ID__) loadDefaults(window.__USER_ID__);
-        }catch(e){ console.warn("getProfile 失敗（可能尚未授權 profile）", e); }
-      }catch(e){ console.error("liff.init 失敗", e); }
-    }
 
     // 記住資料（含備註）
     const STORE_VER = "v2";
@@ -230,19 +186,34 @@
         localStorage.setItem(keyFor(uid), JSON.stringify(data));
       }catch{}
     }
-    $("#resetBtn").addEventListener("click", (ev) => {
+    $("#resetBtn").addEventListener("click",(ev)=>{
       if (ev.shiftKey && window.__USER_ID__) {
         localStorage.removeItem(keyFor(window.__USER_ID__));
-        alert("已清除此使用者的記住資料（含備註）");
+        alert("已清除記住的資料（含備註）");
       }
     });
 
-    // AM/PM 選擇
+    // LIFF 初始化（先就緒，再抓 profile）
+    let LIFF_READY = false;
+    async function initLiff(){
+      try{
+        await liff.init({ liffId: LIFF_ID });
+        if (!liff.isLoggedIn()) { liff.login({ redirectUri: window.location.href }); return; }
+        LIFF_READY = true;
+        try{
+          const p = await liff.getProfile();
+          window.__USER_ID__ = p.userId || "";
+          if (window.__USER_ID__) loadDefaults(window.__USER_ID__);
+        }catch(e){ /* profile 非必需 */ }
+      }catch(e){ console.error("liff.init 失敗", e); }
+    }
+
+    // AM/PM 控制
     const optAM = $("#optAM"), optPM = $("#optPM");
     function setSlot(slot){
-      const st = byName("startTime"), et = byName("endTime"), sl = byName("slot");
-      if(slot === AM.key){ st.value=AM.start; et.value=AM.end; sl.value=AM.key; optAM.setAttribute("aria-pressed","true"); optPM.setAttribute("aria-pressed","false"); }
-      else if(slot === PM.key){ st.value=PM.start; et.value=PM.end; sl.value=PM.key; optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","true"); }
+      const st=byName("startTime"), et=byName("endTime"), sl=byName("slot");
+      if (slot===AM.key){ st.value=AM.start; et.value=AM.end; sl.value=AM.key; optAM.setAttribute("aria-pressed","true"); optPM.setAttribute("aria-pressed","false"); }
+      else if (slot===PM.key){ st.value=PM.start; et.value=PM.end; sl.value=PM.key; optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","true"); }
       else { st.value=et.value=sl.value=""; optAM.setAttribute("aria-pressed","false"); optPM.setAttribute("aria-pressed","false"); }
     }
     function setDisabled(el, disabled){
@@ -255,12 +226,11 @@
 
     // 規則計算
     function policyFor(dateStr){
-      // 回傳 { allowToday, allowAM, allowPM, note }
       const d = parseISODate(dateStr);
       const isToday = toISODate(d) === today;
       const isTomorrow = toISODate(d) === tomorrow;
 
-      // 13:00–隔日06:59：今天不可；明天起 上午/下午 都可
+      // 13:00–隔日06:59：今天不可；明天(含)以後 AM/PM 皆可
       if (nowMin >= MIN_13_00 || nowMin <= MIN_06_59) {
         if (isToday) return { allowToday:false, allowAM:false, allowPM:false, note:"現在時間為 13:00–隔日 06:59，不能預約今天" };
         if (isTomorrow) return { allowToday:true, allowAM:true, allowPM:true, note:"明天可預約上午/下午（今天不可）" };
@@ -271,37 +241,30 @@
         if (isToday) return { allowToday:true, allowAM:false, allowPM:true, note:"今天僅可預約下午（15:00–17:00）" };
         return { allowToday:true, allowAM:true, allowPM:true, note:"明天(含)以後皆可預約上午/下午" };
       }
-      // 其他邊界（保險）
+      // 其他（保險）
       if (isToday) return { allowToday:false, allowAM:false, allowPM:false, note:"目前不可預約今天" };
       return { allowToday:true, allowAM:true, allowPM:true, note:"" };
     }
 
-    function enforceMinDate(){
-      // 13:00–隔日06:59：minDate = 明天；否則 minDate = 今天
-      const minDate = (nowMin >= MIN_13_00 || nowMin <= MIN_06_59) ? tomorrow : today;
-      const el = byName("orderDate");
-      el.min = minDate;
-      if (!el.value || el.value < minDate) el.value = minDate;
-    }
-
+    // 日期限制
     const orderDateEl = byName("orderDate");
     const dateHelp = $("#dateHelp");
+    function enforceMinDate(){
+      const minDate = (nowMin >= MIN_13_00 || nowMin <= MIN_06_59) ? tomorrow : today;
+      orderDateEl.min = minDate;
+      if (!orderDateEl.value || orderDateEl.value < minDate) orderDateEl.value = minDate;
+    }
     function refreshSlotLimit(){
       const pol = policyFor(orderDateEl.value);
       dateHelp.textContent = pol.note;
 
-      // 控制可用性
       setDisabled(optAM, !pol.allowAM);
       setDisabled(optPM, !pol.allowPM);
-
-      // 清空現有選擇
       setSlot(null);
 
-      // 預設勾選上午（若上午可選）；否則選下午
-      if (pol.allowAM) setSlot(AM.key);
-      else if (pol.allowPM) setSlot(PM.key);
+      // 預設勾選「上午」，若上午不可才選下午
+      if (pol.allowAM) setSlot(AM.key); else if (pol.allowPM) setSlot(PM.key);
 
-      // 若今天不可但日期仍是今天，強制跳到明天並重算
       if (!pol.allowToday && orderDateEl.value === today) {
         orderDateEl.value = tomorrow;
         refreshSlotLimit();
@@ -309,91 +272,55 @@
     }
     orderDateEl.addEventListener("change", refreshSlotLimit);
 
-    // 預填網址參數
-    function prefillFromQuery(){
-      const q = new URLSearchParams(location.search);
-      ["customerName","address","phone","orderDate","qty","note"]
-        .forEach(k => { const v = q.get(k); if (v!==null) byName(k).value = v; });
-    }
-
     // 成功提示
-    function showToast(msg){
-      const t = $("#toast");
-      t.textContent = msg;
-      t.classList.add("show");
-      setTimeout(()=> t.classList.remove("show"), 3200);
-    }
+    function showToast(msg){ const t=$("#toast"); t.textContent=msg; t.classList.add("show"); setTimeout(()=>t.classList.remove("show"), 3200); }
 
     // 送單
-    $("#orderForm").addEventListener("submit", async (e) => {
+    $("#orderForm").addEventListener("submit", async (e)=>{
       e.preventDefault();
-      const btn = $("#submitBtn"), msg = $("#submitMsg");
-      msg.className = "muted"; msg.textContent = "送出中…"; btn.disabled = true;
+      const btn=$("#submitBtn"), msg=$("#submitMsg");
+      msg.className="muted"; msg.textContent="送出中…"; btn.disabled=true;
 
-      enforceMinDate();
-      refreshSlotLimit();
+      enforceMinDate(); refreshSlotLimit();
 
       if (!byName("slot").value) {
-        $("#slotErr").style.display="block";
-        $("#slotErr").textContent = "請選擇可預約的時段（上午或下午）";
-        btn.disabled = false; return;
+        $("#slotErr").style.display="block"; $("#slotErr").textContent="請選擇可預約的時段（上午或下午）";
+        btn.disabled=false; return;
       }
       const qtyVal = parseInt(byName("qty").value, 10);
-      if (isNaN(qtyVal) || qtyVal < 1 || qtyVal > 10) {
-        msg.className = "error"; msg.textContent = "❌ 數量必須是 1～10 之間的整數"; btn.disabled = false; return;
-      }
-      if (!LIFF_READY || !liff.isLoggedIn()) {
-        msg.className = "error"; msg.textContent = "❌ LIFF 尚未就緒或未登入，請重新開啟此 LIFF 連結"; btn.disabled = false; return;
-      }
+      if (isNaN(qtyVal) || qtyVal<1 || qtyVal>10) { msg.className="error"; msg.textContent="❌ 數量必須是 1～10 之間的整數"; btn.disabled=false; return; }
+
+      if (!LIFF_READY || !liff.isLoggedIn()) { msg.className="error"; msg.textContent="❌ LIFF 尚未就緒或未登入"; btn.disabled=false; return; }
       const idToken = liff.getIDToken();
       if (!idToken) { msg.className="error"; msg.textContent="❌ 取不到 ID Token"; btn.disabled=false; return; }
 
       try{
-        const fd = new FormData(e.target);
-        const p = new URLSearchParams();
+        const fd=new FormData(e.target);
+        const p=new URLSearchParams();
         p.set("id_token", idToken);
         ["customerName","address","phone","orderDate","startTime","endTime","qty","note","slot"]
-          .forEach(k => p.set(k, (fd.get(k)||"").toString().trim()));
+          .forEach(k=>p.set(k,(fd.get(k)||"").toString().trim()));
 
-        const controller = new AbortController();
-        const timer = setTimeout(() => controller.abort(), 15000);
-        const res = await fetch(GAS_ENDPOINT, {
-          method:"POST",
-          headers:{ "Content-Type":"application/x-www-form-urlencoded;charset=UTF-8" },
-          body:p.toString(),
-          signal:controller.signal
-        }).catch(err => { throw new Error(err.name==="AbortError" ? "連線逾時，請稍後再試" : err.message); });
+        const controller=new AbortController(); const timer=setTimeout(()=>controller.abort(),15000);
+        const res=await fetch(GAS_ENDPOINT,{ method:"POST", headers:{ "Content-Type":"application/x-www-form-urlencoded;charset=UTF-8" }, body:p.toString(), signal:controller.signal })
+          .catch(err=>{ throw new Error(err.name==="AbortError"?"連線逾時，請稍後再試":err.message); });
         clearTimeout(timer);
 
-        let json = {}; try{ json = await res.json(); }catch{}
-        if (!res.ok || !json.ok) throw new Error(json.message || `HTTP ${res.status}`);
+        let json={}; try{ json=await res.json(); }catch{}
+        if(!res.ok || !json.ok) throw new Error(json.message||`HTTP ${res.status}`);
 
         if (window.__USER_ID__) saveDefaults(window.__USER_ID__);
 
-        msg.className = "ok";
-        msg.textContent = `已送出 ✅ 訂單編號：${json.orderId}`;
+        msg.className="muted"; msg.textContent="";
         showToast(`已送出 ✅ 訂單編號：${json.orderId}`);
-
-        e.target.reset();
-        enforceMinDate(); refreshSlotLimit();
+        e.target.reset(); enforceMinDate(); refreshSlotLimit();
       }catch(err){
-        console.error(err);
-        msg.className = "error";
-        msg.textContent = "❌ " + (err?.message || err);
-      }finally{
-        btn.disabled = false;
-      }
+        console.error(err); msg.className="error"; msg.textContent="❌ "+(err?.message||err);
+      }finally{ btn.disabled=false; }
     });
-
-    // 測試用：refresh / logout
-    $("#refreshBtn")?.addEventListener("click", async () => {
-      try{ const p = await liff.getProfile(); $("#displayName").textContent = p.displayName||"—"; $("#userId").textContent = p.userId||"—"; }catch(e){}
-    });
-    $("#logoutBtn")?.addEventListener("click", () => { try{ liff.logout(); }catch{} location.href = location.href.split("#")[0]; });
 
     // 啟動
     (async function(){
-      prefillFromQuery();
       enforceMinDate();
       await initLiff();
       refreshSlotLimit();
